// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots atoms/Button Login 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-o6m248"
      type="button"
    >
      ログイン
    </button>
  </div>
</div>
`;

exports[`Storyshots atoms/Button Register 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-puj5ec"
      type="button"
    >
      登録
    </button>
  </div>
</div>
`;

exports[`Storyshots atoms/Button Sign Up 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <button
      className="chakra-button css-puj5ec"
      type="button"
    >
      新規会員登録
    </button>
  </div>
</div>
`;

exports[`Storyshots organisms/Header Loggined Header 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-162tvoi"
    />
  </div>
</div>
`;

exports[`Storyshots organisms/Header Logouted Header 1`] = `
<div
  dir="ltr"
  id="story-wrapper"
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <div
    className="css-qe3950"
  >
    <div
      className="css-162tvoi"
    >
      <button
        className="chakra-button css-puj5ec"
        type="button"
      >
        新規会員登録
      </button>
      <button
        className="chakra-button css-o6m248"
        type="button"
      >
        ログイン
      </button>
    </div>
  </div>
</div>
`;
